--- a/style.css
+++ b/style.css
@@ -49,6 +49,11 @@ header a:hover {
     margin-left: 10px;
 }
 
+.logo a:hover {
+    background-color: transparent; /* Elimina cualquier fondo en hover */
+}
+
+
 .dropdown-menu {
     display: none;
     position: absolute;
@@ -96,7 +101,7 @@ video {
 .services {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start; /* Alinea los elementos en la parte superior */
     margin: 20px;
     padding: 10px;
     gap: 15px;
@@ -105,6 +110,9 @@ video {
 .service {
     text-align: center;
     width: 18%;
+    display: flex;
+    flex-direction: column; /* Asegura que los elementos dentro estén en una columna */
+    justify-content: flex-start; /* Asegura que los elementos dentro se alineen hacia arriba */
 }
 
 .service img {
@@ -128,7 +136,9 @@ video {
     font-size: 1em;
     margin-top: 5px;
     color: #666;
+    margin-bottom: 0; /* Elimina margen inferior extra */
 }
+
 
 /* Nuevo Footer */
 footer {
@@ -164,9 +174,10 @@ footer {
 }
 
 .contact-item img {
-    height: 20px; /* Tamaño del icono */
+    height: 30px; /* Tamaño del icono */
     width: auto;
     margin-right: 10px;
+    filter: invert(1);
 }
 
 .footer-social {
@@ -179,8 +190,8 @@ footer {
 }
 
 .footer-social img {
-    height: 25px;
-    width: 25px;
+    height: 30px;
+    width: 30px;
     filter: invert(1); /* Hace que los iconos sean blancos */
     transition: transform 0.3s;
 }
