--- a/style.css
+++ b/style.css
@@ -102,7 +102,6 @@ video {
 }
 
 .services {
-    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: flex-start; /* Alinea los elementos en la parte superior */
@@ -121,7 +120,7 @@ video {
 
 .service img {
     width: 100%;
-    height: 400px;
+    height: 100%;
     border-radius: 10px;
     transition: transform 0.3s ease;
 }
