--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ footer {
 
 .playas h1 {
     font-size: 2rem;
-    color: #333;
+    color: #97E4DF;
     margin-bottom: 20px;   
 }
 
@@ -247,20 +247,31 @@ footer {
 
 .viajesculturales h1 {
     font-size: 2rem;
-    color: #333;
+    color: #97E4DF;
     margin-bottom: 20px;
+}
+
+.quien-soy-index {
+    line-height: 1.9; 
+    text-align: center;
+    margin: 0px auto;
+    padding: 20px;
+    background-color: #a3abd2;
+    color: #444;
 }
 
 .quien-soy {
     line-height: 1.9; 
     text-align: center;
-    margin: 50px auto;
+    margin: 0px auto;
     padding: 20px;
+    color: #444;
 }
+
 
 .quien-soy h1 {
     font-size: 2rem;
-    color: #333;
+    color: #97E4DF;
     margin-bottom: 20px;
 }
 
@@ -326,3 +337,102 @@ footer {
 .texto-playas p {
     margin-bottom: 10px;
 }
+
+.carousel-container {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-image: url('./assets/fondo.jpg'); /* Imagen de fondo */
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  
+  /* Carrusel */
+  .carousel {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .carousel-item {
+    flex: 0 0 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  /* Contenido de la reseña */
+  .review {
+    text-shadow: #333 #333;
+    padding: 20px;
+    color: #fff;
+    border-radius: 10px;
+    text-align: center;
+    width: 60%;
+  }
+  
+  .client-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .client-img {
+    width: 120px;  /* Ajustamos el tamaño */
+    height: 120px; /* Ajustamos el tamaño */
+    border-radius: 50%;
+    object-fit: cover; /* Asegura que la imagen no se distorsione */
+    margin-bottom: 15px;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 3);
+  }
+  
+  .review-text {
+    font-style: italic;
+    font-size: 1.2em;
+    margin-bottom: 10px;
+    text-shadow: 0 6px 18px rgba(0, 0, 0, 3);
+  }
+  
+  .client-name {
+    font-weight: bold;
+    font-size: 1.1em;
+    text-shadow: 0 6px 18px rgba(0, 0, 0, 3);
+  }
+  
+  /* Controles de navegación */
+  .carousel-nav {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+  }
+  
+  .prev, .next {
+
+    color: #fff;
+    padding: 10px 15px;
+    font-size: 1em;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+  }
+  
+  .prev:hover, .next:hover {
+
+    transform: scale(1.1); /* Aumenta ligeramente el tamaño en hover */
+  }
+  
+  .prev {
+    margin-left: 10px;
+  }
+  
+  .next {
+    margin-right: 10px;
+  }
